<resources>
    <string name="app_name" translatable="false">Wearer</string>

    <!--        SignInActivity      -->
    <string name="signInInvitation">Authenticate to continue</string>
    <string name="signInAnonymously">Sign in anonymously</string>
    <string name="signInWithGoogle">Sign in with Google</string>
    <!--                            -->

    <!--       ClothesTypesByWearingWayActivity       -->
    <string name="outerwear">Outerwear</string>
    <string name="lightClothes">Light clothes</string>
    <string name="underwear">Underwear</string>
    <string name="shoes">Shoes</string>
    <string name="accessories">Accessories</string>
    <!--                                              -->

    <string name="myClothes">My clothes</string>

    <!--    Clothes Subtypes-->
    <string name="overcoat">Overcoat</string>
    <string name="cloak">Cloak</string>
    <string name="jacket">Jacket</string>
    <string name="poncho">Poncho</string>
    <string name="windcheater">Windcheater</string>

    <string name="hoodie">Hoodie</string>
    <string name="jumper">Jumper</string>
    <string name="sweater">Sweater</string>
    <string name="shirt">Shirt</string>
    <string name="tShirt">T-shirt</string>
    <string name="polo">Polo</string>
    <string name="top">Top</string>
    <string name="vest">Vest</string>
    <string name="dress">Dress</string>

    <string name="trousers">Trousers</string>
    <string name="jeans">Jeans</string>
    <string name="knickerbockers">Knickerbockers</string>
    <string name="skirt">Skirt</string>
    <string name="shorts">Shorts</string>

    <string name="briefs">Briefs</string>
    <string name="boxers">Boxers</string>
    <string name="nightie">Nightie</string>
    <string name="socks">Socks</string>

    <string name="snickers">Snickers</string>
    <string name="gumshoes">Gumshoes</string>
    <string name="boot">Boot</string>
    <string name="highHeels">High-heels</string>

    <string name="scarf">Scarf</string>
    <string name="bag">Bag</string>
    <string name="umbrella">Umbrella</string>


    <string name="delete">Delete</string>

    <string name="itemWillBeRemoved">Item %1$s will be removed</string>
    <string name="undo">Undo</string>


    <string name="bleaching">Bleaching</string>
    <string name="bleaching_no">No bleaching</string>
    <string name="bleaching_non_chlorine">Non-chlorine bleaching</string>
    <string name="machine_washing">Machine washing</string>
    <string name="hand_washing">Hand washing</string>
    <string name="washing_no">Washing no</string>
    <string name="hand_washing_cold">Cold hand washing</string>
    <string name="hand_washing_warm">Warm hand washing</string>
    <string name="washing_30deg">Washing at 30 °C</string>
    <string name="washing_40deg">Washing at 40 °C</string>
    <string name="washing_50deg">Washing at 50 °C</string>
    <string name="washing_60deg">Washing at 60 °C</string>
    <string name="washing_70deg">Washing at 70 °C</string>
    <string name="washing_95deg">Washing at 95 °C</string>

    <string name="washing_30deg_permanent_press">Washing at 30 °C permanent press</string>
    <string name="washing_40deg_permanent_press">Washing at 40 °C permanent press</string>
    <string name="washing_50deg_permanent_press">Washing at 50 °C permanent press</string>
    <string name="washing_60deg_permanent_press">Washing at 60 °C permanent press</string>
    <string name="washing_95deg_permanent_press">Washing at 95 °C permanent press</string>

    <string name="washing_30deg_extra_care">Washing at 30 °C extra care</string>
    <string name="washing_40deg_extra_care">Washing at 40 °C extra care</string>
    <string name="ironing">Ironing</string>
    <string name="ironing_no">No ironing</string>
    <string name="ironing_steam_no">No ironing steam</string>
    <string name="ironing_cool">Ironing cool</string>
    <string name="ironing_warm">Ironing warm</string>
    <string name="ironing_hot">Ironing hot</string>

    <!--    AddClothingItemFragment-->
    <string name="name">Name</string>
    <string name="brand">Brand</string>
    <string name="size">Size</string>
    <string name="note">Note</string>
    <string name="addClothingItem">Add clothing item</string>
    <string name="addClothingItemButton">Add</string>
    <string name="cancelAddingClothingItemButton">Cancel</string>
    <string name="pick_year">Pick a year</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="purchaseYear">Purchase year</string>
    <string name="material">Material</string>
    <string name="addPhoto">Add photo</string>
    <string name="takePhoto">Take photo</string>
    <string name="pickFromGallery">Choose from gallery</string>
    <string name="openSelectedPhoto">Open selected photo</string>
    <string name="caringLabels">Caring labels</string>
    <string name="clothingItemNameMustNotBeEmpty">Clothing item\'s name must not be empty!</string>
    <string name="close">Close</string>

    <string name="chooseWashingTags">Choose caring labels</string>


    <string name="signedWithGoogle">Signed with Google</string>
    <string name="signedAnonymously">Signed anonymously</string>
    <string name="signedWayUnknown">Unknown sign-in way</string>

    <string name="deleteMyAccount">Delete my account</string>

    <string name="deleteMyAccountConfirmation">Are you sure to delete the account? This action is irreversible. All data belonging you, will be erased!</string>

    <string name="accountDeletedSuccessfully">Account deleted successfully</string>
    <string name="unableToDeleteAccount">An error occurred, the account was not deleted</string>


    <!--    -->


    <string name="clothingTypeTransition" translatable="false">clothingTypeTransition</string>
    <string name="clothingSubtypeTransition" translatable="false">clothingSubtypeTransition</string>
</resources>