<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"

    android:padding="20dp"

    android:background="@drawable/rounded_shape"
    tools:context=".fragments.NumberPickerDialog">

    <TextView
        android:id="@+id/titleView"
        style="@style/TextView.Title"

        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/pick_year" />


    <NumberPicker
        android:id="@+id/numberPicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_below="@+id/titleView" />

    <Button
        android:id="@+id/ok"
        style="@style/Button.Confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/confirm"

        android:layout_below="@id/numberPicker" />

    <Button
        android:id="@+id/cancel"
        style="@style/Button.Cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="10dp"
        android:text="@string/cancel"

        android:layout_below="@id/ok" />


</RelativeLayout>