<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    tools:context=".fragments.AddClothingItemFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp"
        android:paddingVertical="20dp"
        android:orientation="vertical">

        <View
            android:id="@+id/divider"
            android:layout_width="50dp"
            android:layout_height="3dp"
            android:background="@color/blue"

            android:layout_marginBottom="20dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            style="@style/TextView.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:text="@string/addClothingItem" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="50" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:id="@+id/brand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/brand">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:maxLength="30" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:id="@+id/size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/size">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="30" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:id="@+id/purchaseYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/purchaseYear"
            app:startIconDrawable="@drawable/ic_baseline_calendar_today_24"

            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:maxLength="30"
                android:inputType="none"

                android:textColor="@color/gray" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            style="@style/Button.Confirm"
            android:id="@+id/addClothingItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/addClothingItemButton"

            android:layout_marginTop="20dp" />

        <Button
            style="@style/Button.Cancel"
            android:id="@+id/cancelAddingClothingItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/cancelAddinglothingItemButton" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>