<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:weightSum="1"
    android:background="@drawable/rounded_dialog"
    android:padding="20dp"
    android:orientation="vertical"
    tools:context="com.codemitry.wearer.fragments.CaringLabelsPickerFragment">

    <TextView
        style="@style/TextView.Title"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"

        android:text="@string/chooseWashingTags" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tagList"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="350dp"

        app:spanCount="5"
        android:numColumns="auto_fit"

        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        tools:listitem="@layout/checkable_tag" />

    <Button
        style="@style/Button.Confirm"
        android:id="@+id/confirm"
        android:text="@string/confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/cancel"
        style="@style/Button.Cancel"
        android:text="@string/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" />


</LinearLayout>