<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    tools:context="com.codemitry.wearer.activities.ClothingItemActivity"

    android:background="?backgroundColor"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp"
        android:paddingVertical="20dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/clothingSubtype"
            style="@style/TextView.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            tools:text="@string/overcoat" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:enabled="false"
                android:maxLength="50" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:id="@+id/brand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/brand">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:inputType="none"
                android:enabled="false"

                android:maxLength="30" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:id="@+id/size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/size">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:inputType="none"
                android:enabled="false"

                android:maxLength="30" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:id="@+id/purchaseYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/purchaseYear"
            app:startIconDrawable="@drawable/ic_baseline_calendar_today_24">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:maxLength="30"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:id="@+id/material"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/material">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/TextInputEditText"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:inputType="none"
                android:enabled="false"

                android:maxLength="40" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:id="@+id/note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/note">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/TextInputEditText"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:inputType="none"
                android:enabled="false"

                android:maxLength="100" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/caringLabelsTitle"
            style="@style/TextView"
            android:textColor="?textColorSecondary"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"

            android:text="@string/caringLabels" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            >

            <HorizontalScrollView
                android:layout_marginTop="10dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/tagSize">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/caringLabelsList"
                    android:layout_width="wrap_content"

                    android:layout_height="match_parent"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/caring_label_image"
                    android:orientation="horizontal" />

            </HorizontalScrollView>

        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="20dp"
            android:layout_height="150dp">

            <ImageButton
                android:id="@+id/photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:background="?android:attr/selectableItemBackground" />

        </RelativeLayout>


        <Button
            style="@style/Button.Cancel"
            android:id="@+id/close"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="10dp"
            android:text="@string/close" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>