<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.SignInActivity">

    <LinearLayout
        android:id="@+id/header"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:gravity="center_horizontal"
        android:padding="40dp">

        <ImageView
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/signInInvitation"
            style="@style/TextView.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/signInInvitation"
            android:textColor="?textColorInverted"
            android:textAlignment="center"

            android:layout_marginTop="80dp" />

    </LinearLayout>

    <Button
        android:id="@+id/googleSignIn"
        style="@style/TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signInWithGoogle"
        android:textColor="?textColorSecondary"
        app:icon="@drawable/ic_google"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header" />

    <Button
        android:id="@+id/anonymousSignIn"
        style="@style/TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signInAnonymously"
        android:textColor="?textColorSecondary"
        app:icon="@drawable/ic_incognito"
        app:iconTint="?attr/textColorSecondary"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/googleSignIn" />

</androidx.constraintlayout.widget.ConstraintLayout>