<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.ClothesTypesByWearingWayActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/outerwear"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/outerwear"
                android:scaleType="center" />

            <TextView
                style="@style/TextView.Title.Bright"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="35dp"
                android:layout_gravity="center"
                android:layout_centerInParent="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/outerwear" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/lightClothes"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/light_clothes"
                android:scaleType="center" />

            <TextView
                style="@style/TextView.Title.Bright"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="35dp"
                android:layout_gravity="center"
                android:layout_centerInParent="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lightClothes" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/underwear"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/underwear"
                android:scaleType="center" />

            <TextView
                style="@style/TextView.Title.Bright"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="35dp"
                android:layout_gravity="center"
                android:layout_centerInParent="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/underwear" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/shoes"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/shoes"
                android:scaleType="center" />

            <TextView
                style="@style/TextView.Title.Bright"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="35dp"
                android:layout_gravity="center"
                android:layout_centerInParent="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shoes" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/accessories"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/accessories"
                android:scaleType="center" />

            <TextView
                style="@style/TextView.Title.Bright"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="35dp"
                android:layout_gravity="center"
                android:layout_centerInParent="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/accessories" />

        </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>